--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
-<<<<<<< HEAD
 <!--Nan's Comment-->
-=======
+
 <!doctype html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
+
+	<title>HOME GAINS</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- SEMANTIC LINK -->
+	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
+
+
 	<title></title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
 
 	<p>Hello world! This is HTML5 Boilerplate.</p>
 
+	<!-- JQUERY -->
 
+	<script src="semantic/dist/semantic.min.js"></script>
+	<!-- SEMANTIC JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
 </body>
 
+
 </html>
->>>>>>> refs/remotes/origin/master
+
+</html>
+
