--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<!-- SEMANTIC LINK -->
 	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 	<!-- CSS -->
+	<link rel="stylesheet" href="animate.css">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 
 
