--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<title>HOME GAINS</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- SEMANTIC LINK -->
-	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+	<!-- BOOTSTRAP LINK -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- CSS -->
-	<link rel="stylesheet" href="animate.css">
+	<link rel="stylesheet" href="assets/animate.css">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 
 	<meta name="description" content="">
@@ -26,10 +26,9 @@
 	<p>Hello world! This is HTML5 Boilerplate.</p>
 
 	<!-- JQUERY -->
-
-	<script src="semantic/dist/semantic.min.js"></script>
-	<!-- SEMANTIC JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<!-- BOOSTRAP JQUERY -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
 
