--- a/index.html
+++ b/index.html
@@ -22,8 +22,49 @@
 </head>
 
 <body>
- <p>Just trying out</p>
-	<p>Hello world! This is HTML5 Boilerplate.</p>
+
+<div class="page-header">
+	<h1>Home Gains</h1>
+</div>
+
+<div class="row">
+	<div class="col-lg-1"></div>
+
+	<div class="col-lg-4">
+		<div class="panel panel-default">
+	  		<div class="panel-body">
+	  			Street Address
+	   			<div class="well"></div>
+				City
+				<div class="well"></div>
+				State
+				<div class="well"></div>
+				Zip code
+				<div class="well"></div>
+	  		</div>
+		</div>
+	</div>
+
+	<div class="col-lg-1"></div>
+
+	<div class="col-lg-4">
+		<div class="panel panel-default">
+		<div class="panel-body">MAP</div>
+		</div>
+	</div>
+
+</div>
+
+<div class="row">
+	<div class="col-lg-1"></div>
+
+	<div class="col-lg-4">
+		<div class="panel panel-default">
+		Where the Zestimate Value will populate
+		</div>
+	</div>
+
+</div>
 
 	<!-- JQUERY -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
