--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
 <div class="row">
 	<div class="col-lg-1"></div>
 
+	<div class="col-lg-8">
+		<div class="panel-default">
+			<div class="panel-body">
+				<h3>How to Use Home Gains</h3>
+				<p> This is where we will put the instruction and "how to" to use the application</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-1"></div>
+
 	<div class="col-lg-4">
-		<div class="panel panel-default">
+		<div class="panel panel-default" id="panel">
 	  		<div class="panel-body">
 	  			Street Address
 	   			<div class="well"></div>
@@ -47,9 +60,9 @@
 
 	<div class="col-lg-1"></div>
 
-	<div class="col-lg-4">
+	<div class="col-lg-4" id="panel">
 		<div class="panel panel-default">
-		<div class="panel-body">MAP</div>
+			<p>MAP</p>
 		</div>
 	</div>
 
@@ -59,7 +72,7 @@
 	<div class="col-lg-1"></div>
 
 	<div class="col-lg-4">
-		<div class="panel panel-default">
+		<div class="panel panel-default" id="panel">
 		Where the Zestimate Value will populate
 		</div>
 	</div>
