--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="panel panel-default" id="weather-info">
 		Where the Weather Info will appear
 		</div>
-	</div> 
+	</div>
 
 </div>
 </container>
@@ -88,9 +88,9 @@
 	<!-- BOOSTRAP JQUERY -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- Google API -->
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBS9KZh27zq_8_0aon5HNWAJ9Lu7orkD7E&callback=initMap"></script>
+	<!--	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBS9KZh27zq_8_0aon5HNWAJ9Lu7orkD7E&callback=initMap"></script>-->
 	<!-- Local JS File -->
-	<script type="text/javascript" src="/Users/chrisdaschke/Portfolio/teamgit-gains/assets/app.js"></script>
+	<script type="text/javascript" src="assets/app.js"></script>
 
 </body>
 
