--- a/index.html
+++ b/index.html
@@ -1,101 +1,71 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-us">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Weather Finder</title>
 
-	<title>weather app</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="description" content="Week 8 assignment, Project 1" />
+  <meta name="classification" content="game" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-	<!-- BOOTSTRAP LINK -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- CSS & BOOTSTRAP & JQUERY -->
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="assets/animate.css">
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+<!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Kameron|PT+Sans" rel="stylesheet">
 
-	<!-- Google API -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Moment.js -->
+  <script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
+
+<!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
-
 <body>
+<div class="container-fluid">
+	<div class="page-header">
+		<h1>Weather Finder</h1>
+	</div>
 
-<div class="page-header">
-	<h1>Weather + Maps</h1>
-</div>
-
-<div class="row">
-	<div class="col-lg-1"></div>
-</div>
-
-<div class="row">
-	<div class="col-lg-1"></div>
-
-	<div class="col-lg-4">
-		<div class="panel panel-default">
-			<div class="panel-body">
+		<div id="leftSide">
+			<div id="infoBox">
 				<h3>Instructions</h3>
-				<p>Type the name of a city for the current weather data</p>
+		  		<p>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</p>
 			</div>
-		</div>
-
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<h3>Current Date/Time</h3>
+			<div id="placeSearch">
+				<h3>Location</h3>
+		  		<div class="input-group">
+      				<input type="text" class="form-control" placeholder="Enter the name of a city.">
+      				<span class="input-group-btn">
+        				<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-map-marker"></span> Search Map</button>
+      				</span>
+    			</div><!-- /input-group -->
 			</div>
+			<div id="weatherSearch">
+				<h3>Weather</h3>
+		  		<div class="input-group">
+      				<input type="text" class="form-control" placeholder="DD/MM">
+      				<span class="input-group-btn">
+        				<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
+    			</div><!-- /input-group -->
+    		</div>
 		</div>
-
-		<div class="panel panel-default" id="panel">
-	  		<div class="panel-body">
-	  			Search
-	   			<div class="form-group">
-	   				<input type="search">
-	   			</div>
-	   			<button id="search">Search</button>
-	  		</div>
+		<div id="map">
 		</div>
-	</div>
-
-	<div class="col-lg-1"></div>
-
-	<div class="col-lg-4" id="panel">
-		<div class="panel panel-default">
-			<p>MAP</p>
-			<div id="map"></div>
-		</div>
+	<div class="row">
+	 <div id="weather-info"></div>
 	</div>
 
 </div>
 
-<container>
-<div class="row">
-	<div class="col-lg-1"></div>
 
- <div class="col-lg-10"> 
-		<div class="panel panel-default" id="weather-info">
-		Where the Weather Info will appear
-		</div>
-	</div>
-
-</div>
-</container>
-
-	<!-- JQUERY -->
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<!-- BOOSTRAP JQUERY -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- Google API -->
-	<!--	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBS9KZh27zq_8_0aon5HNWAJ9Lu7orkD7E&callback=initMap"></script>-->
-	<!-- Local JS File -->
-	<script type="text/javascript" src="assets/app.js"></script>
-
+<!-- Javascript -->
+  <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
-
-
 </html>
-
-</html>
-
