jquery w/ scroll function panel

--- a/index.html
+++ b/index.html
@@ -52,15 +52,21 @@
 		  		<div class="input-group">
       				<input type="text" class="form-control" placeholder="DD/MM">
       				<span class="input-group-btn">
-        				<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
+        				<button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
     			</div><!-- /input-group -->
     		</div>
 		</div>
 		<div id="map">
 		</div>
-	<div class="row">
-	 <div id="weather-info"></div>
+	<div class="col-lg-3"></div>
+
+	<div class="col-lg-5">
+		<div class="panel panel-default" id="weather-info">
+			
+		</div>
+
 	</div>
+
 
 </div>
 
