--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		  		<div class="input-group">
       				<input type="text" class="form-control" placeholder="DD/MM">
       				<span class="input-group-btn">
-        				<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
+        				<button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
     			</div><!-- /input-group -->
     		</div>
 		</div>
