search button id

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		  		<div class="input-group">
       				<input type="text" class="form-control" placeholder="Enter the name of a city.">
       				<span class="input-group-btn">
-        				<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-map-marker"></span> Search Map</button>
+        				<button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-map-marker"></span> Search Map</button>
       				</span>
     			</div><!-- /input-group -->
 			</div>
