--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div id="leftSide">
 		<div id="infoBox">
 			<h2>Instructions</h2>
-		  	<p>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</p>
+		  	<h4>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</h4>
 		</div><!-- close of #infoBox -->
 		<div id="placeSearch">
 			<h2>Location</h2>
