Added Bootstrap back in for row and fixed the spacing problem.

--- a/5_Day_Panel_Model.html
+++ b/5_Day_Panel_Model.html
@@ -63,43 +63,45 @@
                <h3>5 Day Forecast</h3>
             </div><!-- close of #weatherBanner -->
         </div>
-        <div id="panelConatiner">
-            <div id="weatherPanel">
+        <div id="panelConatiner" class="row">
+            <div class="col-xs-1 empty"></div>
+            <div id="weatherPanel" class="col-xs-2">
                 <h5 class="date">Day 1</h5>
                 <p class="icon">Icon</p>
                 <p class="high">High</p>
                 <p class="low">Low</p>
                 <p class="desc">Description</p>
             </div><!-- close of #weatherPanel -->
-            <div id="weatherPanel">
+            <div id="weatherPanel" class="col-xs-2">
                 <h5 class="date">Day 2</h5>
                 <p class="icon">Icon</p>
                 <p class="high">High</p>
                 <p class="low">Low</p>
                 <p class="desc">Description</p>
             </div><!-- close of #weatherPanel -->
-            <div id="weatherPanel">
+            <div id="weatherPanel" class="col-xs-2">
                 <h5 class="date">Day 3</h5>
                 <p class="icon">Icon</p>
                 <p class="high">High</p>
                 <p class="low">Low</p>
                 <p class="desc">Description</p>
             </div><!-- close of #weatherPanel -->
-            <div id="weatherPanel">
+            <div id="weatherPanel" class="col-xs-2">
                 <h5 class="date">Day 4</h5>
                 <p class="icon">Icon</p>
                 <p class="high">High</p>
                 <p class="low">Low</p>
                 <p class="desc">Description</p>
             </div><!-- close of #weatherPanel -->
-            <div id="weatherPanel">
+            <div id="weatherPanel" class="col-xs-2">
                 <h5 class="date">Day 5</h5>
                 <p class="icon">Icon</p>
                 <p class="high">High</p>
                 <p class="low">Low</p>
                 <p class="desc">Description</p>
             </div><!-- close of #weatherPanel -->
-        </div><!-- close of #panelConatiner -->
+            <div class="col-xs-1 empty"></div>
+        </div><!-- close of #panelConatiner and .row -->
     </div><!-- close of #weather-info -->
 </div><!-- close of .container-fluid -->
 
