Revised color scheme, formatted all the text in the panels.

--- a/5_Day_Panel_Model.html
+++ b/5_Day_Panel_Model.html
@@ -35,7 +35,7 @@
     <div id="leftSide">
         <div id="infoBox">
             <h2>Instructions</h2>
-            <p>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</p>
+            <h4>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</h4>
         </div><!-- close of #infoBox -->
         <div id="placeSearch">
             <h2>Location</h2>
@@ -66,39 +66,39 @@
         <div id="panelConatiner" class="row">
             <div class="col-xs-1 empty"></div>
             <div id="weatherPanel" class="col-xs-2">
-                <h5 class="date">Day 1</h5>
-                <p class="icon">Icon</p>
-                <p class="high">High</p>
-                <p class="low">Low</p>
-                <p class="desc">Description</p>
+                <h5 class="date">Monday</h5>
+                <img src="http://fpoimg.com/90x90" class="icon">
+                <p class="high">90</p>
+                <p class="low">70</p>
+                <p class="desc">Partly Cloudy</p>
             </div><!-- close of #weatherPanel -->
             <div id="weatherPanel" class="col-xs-2">
-                <h5 class="date">Day 2</h5>
-                <p class="icon">Icon</p>
-                <p class="high">High</p>
-                <p class="low">Low</p>
-                <p class="desc">Description</p>
+                <h5 class="date">Tuesday</h5>
+                <img src="http://fpoimg.com/90x90" class="icon">
+                <p class="high">105</p>
+                <p class="low">85</p>
+                <p class="desc">Sunny</p>
             </div><!-- close of #weatherPanel -->
             <div id="weatherPanel" class="col-xs-2">
-                <h5 class="date">Day 3</h5>
-                <p class="icon">Icon</p>
-                <p class="high">High</p>
-                <p class="low">Low</p>
-                <p class="desc">Description</p>
+                <h5 class="date">Wednesday</h5>
+                <img src="http://fpoimg.com/90x90" class="icon">
+                <p class="high">85</p>
+                <p class="low">70</p>
+                <p class="desc">Tons and tons of Rain</p>
             </div><!-- close of #weatherPanel -->
             <div id="weatherPanel" class="col-xs-2">
-                <h5 class="date">Day 4</h5>
-                <p class="icon">Icon</p>
-                <p class="high">High</p>
-                <p class="low">Low</p>
-                <p class="desc">Description</p>
+                <h5 class="date">Thursday</h5>
+                <img src="http://fpoimg.com/90x90" class="icon">
+                <p class="high">95</p>
+                <p class="low">65</p>
+                <p class="desc">Light Drizzle</p>
             </div><!-- close of #weatherPanel -->
             <div id="weatherPanel" class="col-xs-2">
-                <h5 class="date">Day 5</h5>
-                <p class="icon">Icon</p>
-                <p class="high">High</p>
-                <p class="low">Low</p>
-                <p class="desc">Description</p>
+                <h5 class="date">Friday</h5>
+                <img src="http://fpoimg.com/90x90" class="icon">
+                <p class="high">115</p>
+                <p class="low">70</p>
+                <p class="desc">Hot as eff!</p>
             </div><!-- close of #weatherPanel -->
             <div class="col-xs-1 empty"></div>
         </div><!-- close of #panelConatiner and .row -->
