Updated the original index file.

--- a/index.html
+++ b/index.html
@@ -29,38 +29,39 @@
 </head>
 <body>
 <div class="container-fluid">
-	<div class="page-header">
-		<h1>Weather Finder</h1>
-	</div>
-	<div id="leftSide">
-		<div id="infoBox">
-			<h2>Instructions</h2>
-		  	<h4>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</h4>
-		</div><!-- close of #infoBox -->
-		<div id="placeSearch">
-			<h2>Location</h2>
-		  	<div class="input-group">
-      			<input type="text" class="form-control" placeholder="Enter the name of a city.">
-      			<span class="input-group-btn">
-        			<button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-map-marker"></span> Search Map</button>
-      			</span>
-    		</div><!-- close of .location input-group -->
-		</div><!-- close of #placeSearch -->
-		<div id="weatherSearch">
-			<h2>Weather</h2>
-		  	<div class="input-group">
-      			<input type="text" class="form-control" placeholder="DD/MM">
-      			<span class="input-group-btn">
-        			<button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
-        		</span>
-    		</div><!-- close of .weather input-group -->
-    	</div><!-- close of #weatherSearch -->
-	</div><!-- close of #leftSide -->
-	<div id="map"></div>
-	<div id="weather-info"></div>
+    <div class="page-header">
+        <h1>Weather Finder</h1>
+    </div>
+    <div id="leftSide">
+        <div id="infoBox">
+            <h2>Instructions</h2>
+            <h4>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</h4>
+        </div><!-- close of #infoBox -->
+        <div id="placeSearch">
+            <h2>Location</h2>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Enter the name of a city.">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-map-marker"></span> Search Map</button>
+                </span>
+            </div><!-- close of .location input-group -->
+        </div><!-- close of #placeSearch -->
+        <div id="weatherSearch">
+            <h2>Weather</h2>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="DD/MM">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" id="search"><span class="glyphicon glyphicon-certificate"></span>  Search Weather</button>
+                </span>
+            </div><!-- close of .weather input-group -->
+        </div><!-- close of #weatherSearch -->
+    </div><!-- close of #leftSide -->
+    <div id="map"></div>
+    <div id="weather-info">
+    </div><!-- close of #weather-info -->
 </div><!-- close of .container-fluid -->
 
 <!-- Javascript -->
   <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
-</html>
+</html> 
