--- a/5_Day_Panel_Model.html
+++ b/5_Day_Panel_Model.html
@@ -63,7 +63,7 @@
                <h3>5 Day Forecast</h3>
             </div><!-- close of #weatherBanner -->
         </div>
-        <div id="panelConatiner" class="row">
+        <div id="panelContainer" class="row">
             <div class="col-xs-1 empty"></div>
             <div id="weatherPanel" class="col-xs-2">
                 <h5 class="date">Monday</h5>
