--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                 </span>
             </div><!-- close of .weather input-group -->
         </div><!-- close of #weatherSearch -->
-    </div><!-- close of #leftSide -->
+    </div><!-- closse of #leftSide -->
     <div id="map"></div>
-    <div id="weather-info">
+    <div id="weather-info" class="panel panel-default">
+    <div id="panelContainer"></div>
     </div><!-- close of #weather-info -->
 </div><!-- close of .container-fluid -->
 
