--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     </div><!-- closse of #leftSide -->
     <div id="map"></div>
     <div id="weather-info" class="panel panel-default">
-    <div id="panelContainer"></div>
+    	<div id="panelContainer">
+    		
+    	</div>
     </div><!-- close of #weather-info -->
 </div><!-- close of .container-fluid -->
 
