--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div class="row">
 					<div class="col-lg-12 placeSearch">
 						<h2>Instructions</h2>
-						<h4>To see the map and weather for a location that you desire, enter the Location and date in the boxes below.</h4>
+						<h4>To see the map and weather for a location that you desire, enter the Location in the box below.</h4>
 					</div>
 				</div>
 				<div class="row">
